5-app/chart/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: myapp
spec:
  type: ClusterIP
  ports:
    - port: 8080
  selector:
    app: myapp
